--- a/.env.template
+++ b/.env.template
@@ -4,5 +4,5 @@ export DOCKER_USERNAME=
 export SERVER="ghcr.io"
 export CLUSTER_NAMESPACE="default"
 
-export IMAGE_NAME="ghcr.io/ikenom/shopify-client-k8s"
+export IMAGE_NAME="ghcr.io/ikenom/user-service"
 export IMAGE_TAG="latest"
