--- a/.env.template
+++ b/.env.template
@@ -6,3 +6,5 @@ export CLUSTER_NAMESPACE="default"
 
 export IMAGE_NAME="ghcr.io/ikenom/user-service"
 export IMAGE_TAG="latest"
+
+export FIREBASE_API_KEY=
