update vcr and ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,9 +31,8 @@ jobs:
         script/test
       env:
         IMAGE_NAME: ghcr.io/${{ github.event.repository.owner.login }}/for-testing/${{ github.event.repository.name }}
-        CONTENTFUL_ACCESS_TOKEN: ${{ secrets.CONTENTFUL_ACCESS_TOKEN }}
-        CONTENTFUL_MANAGEMENT_ACCESS_TOKEN: ${{ secrets.CONTENTFUL_MANAGEMENT_ACCESS_TOKEN }}
-        CONTENTFUL_SPACE_ID: ${{ secrets.CONTENTFUL_SPACE_ID }}
+        FIREBASE_API_KEY: ${{ secrets.FIREBASE_API_KEY }}
+
   lint:
     runs-on: ubuntu-latest
     needs: [build]
