--- a/spec/vcr_cassettes/FirebaseClient/_update_user/should_fail_when_id_token_invalid.yml
+++ b/spec/vcr_cassettes/FirebaseClient/_update_user/should_fail_when_id_token_invalid.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: post
-    uri: https://identitytoolkit.googleapis.com/v1/accounts:update?key=AIzaSyAX6dyB5TKhUB8RUu7LoxD55HGBtTkO5Gk
+    uri: https://identitytoolkit.googleapis.com/v1/accounts:update<redacted-request>
     body:
       encoding: UTF-8
       string: '{"idToken":"foo","displayName":"John Doe"}'
@@ -20,14 +20,14 @@ http_interactions:
       code: 400
       message: Bad Request
     headers:
+      Cache-Control:
+      - no-cache, no-store, max-age=0, must-revalidate
       Date:
-      - Tue, 09 Feb 2021 03:12:03 GMT
+      - Tue, 09 Feb 2021 03:46:04 GMT
       Expires:
       - Mon, 01 Jan 1990 00:00:00 GMT
       Pragma:
       - no-cache
-      Cache-Control:
-      - no-cache, no-store, max-age=0, must-revalidate
       Vary:
       - Origin
       - Referer
@@ -63,5 +63,5 @@ http_interactions:
             ]
           }
         }
-  recorded_at: Tue, 09 Feb 2021 03:12:03 GMT
+  recorded_at: Tue, 09 Feb 2021 03:46:04 GMT
 recorded_with: VCR 6.0.0
