properly redact key

--- a/.env.template
+++ b/.env.template
@@ -8,3 +8,4 @@ export IMAGE_NAME="ghcr.io/ikenom/user-service"
 export IMAGE_TAG="latest"
 
 export FIREBASE_API_KEY=
+export FIREBASE_USER_ID_TOKEN=
