--- a/spec/vcr_cassettes/FirebaseClient/_update_user/should_fail_when_id_token_invalid.yml
+++ b/spec/vcr_cassettes/FirebaseClient/_update_user/should_fail_when_id_token_invalid.yml
@@ -5,7 +5,7 @@ http_interactions:
     uri: https://identitytoolkit.googleapis.com/v1/accounts:update?key=<redacted-key>
     body:
       encoding: UTF-8
-      string: '{"idToken":"foo","displayName":"John Doe"}'
+      string: '{"idToken":"<redacted-key>","displayName":"John Doe"}'
     headers:
       Content-Type:
       - application/json
@@ -20,12 +20,12 @@ http_interactions:
       code: 400
       message: Bad Request
     headers:
+      Date:
+      - Tue, 09 Feb 2021 06:54:18 GMT
       Cache-Control:
       - no-cache, no-store, max-age=0, must-revalidate
       Pragma:
       - no-cache
-      Date:
-      - Tue, 09 Feb 2021 06:18:30 GMT
       Expires:
       - Mon, 01 Jan 1990 00:00:00 GMT
       Vary:
@@ -48,7 +48,7 @@ http_interactions:
       Transfer-Encoding:
       - chunked
     body:
-      encoding: ASCII-8BIT
+      encoding: UTF-8
       string: |
         {
           "error": {
@@ -63,5 +63,5 @@ http_interactions:
             ]
           }
         }
-  recorded_at: Tue, 09 Feb 2021 06:18:30 GMT
+  recorded_at: Tue, 09 Feb 2021 06:54:18 GMT
 recorded_with: VCR 6.0.0
