--- a/spec/vcr_cassettes/FirebaseClient/_sign_up/should_fail_when_password_is_too_short.yml
+++ b/spec/vcr_cassettes/FirebaseClient/_sign_up/should_fail_when_password_is_too_short.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: post
-    uri: https://identitytoolkit.googleapis.com/v1/accounts:signUp?key=AIzaSyAX6dyB5TKhUB8RUu7LoxD55HGBtTkO5Gk
+    uri: https://identitytoolkit.googleapis.com/v1/accounts:signUp?key=<redacted-key>
     body:
       encoding: UTF-8
       string: '{"email":"test@test.com","password":"1"}'
@@ -20,14 +20,14 @@ http_interactions:
       code: 400
       message: Bad Request
     headers:
-      Expires:
-      - Mon, 01 Jan 1990 00:00:00 GMT
-      Cache-Control:
-      - no-cache, no-store, max-age=0, must-revalidate
       Pragma:
       - no-cache
+      Expires:
+      - Mon, 01 Jan 1990 00:00:00 GMT
       Date:
-      - Mon, 08 Feb 2021 05:13:39 GMT
+      - Tue, 09 Feb 2021 06:54:18 GMT
+      Cache-Control:
+      - no-cache, no-store, max-age=0, must-revalidate
       Vary:
       - Origin
       - Referer
@@ -48,7 +48,7 @@ http_interactions:
       Transfer-Encoding:
       - chunked
     body:
-      encoding: ASCII-8BIT
+      encoding: UTF-8
       string: |
         {
           "error": {
@@ -63,5 +63,5 @@ http_interactions:
             ]
           }
         }
-  recorded_at: Mon, 08 Feb 2021 05:13:39 GMT
+  recorded_at: Tue, 09 Feb 2021 06:54:18 GMT
 recorded_with: VCR 6.0.0
