--- a/chart/templates/configmap.yaml
+++ b/chart/templates/configmap.yaml
@@ -6,6 +6,4 @@ data:
   RELEASE_NAME: {{ .Release.Name }}
   RABBITMQ_USERNAME: {{ .Values.rabbitmq.auth.username }}
   RABBITMQ_PASSWORD: {{ .Values.rabbitmq.auth.password }}
-  CONTENTFUL_ACCESS_TOKEN: {{ .Values.contentful.access_token }}
-  CONTENTFUL_SPACE_ID: {{ .Values.contentful.space_id }}
-  CONTENTFUL_MANAGEMENT_ACCESS_TOKEN: {{ .Values.contentful.management_access_token }}
+  FIREBASE_API_KEY: {{ .Values.firebase.api_key }}
