--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,26 +13,13 @@ jobs:
         uses: actions/checkout@v2
         with:
           token: ${{ secrets.SERVICE_ACCOUNT_PAT }}
-          
+
       - name: Configure git
         run: |
           git config --global user.name "$GITHUB_ACTOR"
           git config --global user.email '$GITHUB_ACTOR@users.noreply.github.com'
       - name: Install Python
         uses: actions/setup-python@v1
-
-      - name: Install bump2version and yq
-        run: |
-          pip install --upgrade bump2version
-          pip install --upgrade yq
-
-      - name: Bump Helm version
-        run: |
-          git pull
-          VERSION=$(yq '.version' < chart/Chart.yaml)
-          bump2version --commit --current-version $VERSION patch chart/Chart.yaml
-          git push
-
       - name: Build and push image
         run: |
           docker login ghcr.io -u $GITHUB_ACTOR --password-stdin <<< ${{ secrets.CONTAINER_REGISTRY_PASSWORD }}
@@ -45,10 +32,13 @@ jobs:
           docker push ghcr.io/${{ github.event.repository.owner.login }}/${{ github.event.repository.name }}:$GITHUB_SHA
           docker push ghcr.io/${{ github.event.repository.owner.login }}/${{ github.event.repository.name }}:latest
 
-      - name: Install Helm
-        uses: azure/setup-helm@v1
-        with:
-          version: v3.4.0
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [release]
+    steps:
+      - name: Install bump2version
+        run: |
+          pip install --upgrade bump2version
 
       - name: Install Helm
         uses: azure/setup-helm@v1
@@ -57,9 +47,13 @@ jobs:
 
       - name: Pacakage and push Helm
         run: |
+          VERSION=$(git describe --abbrev=10 --tags)
+          VERSION=${VERSION#"user-service-"}
+          bump2version --current-version $VERSION patch chart/Chart.yaml
           helm package -u --app-version $GITHUB_SHA chart
           docker pull quay.io/helmpack/chart-releaser:v1.1.1
           docker run -v $(pwd):/app quay.io/helmpack/chart-releaser:v1.1.1 cr upload -p /app -o ${{ github.event.repository.owner.login }} -r ${{ github.event.repository.name }} -t ${{ secrets.SERVICE_ACCOUNT_PAT }}
+
       - name: Create Helm index and push to GH pages
         run: |
           git pull
