--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,15 +11,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        with:
-          token: ${{ secrets.SERVICE_ACCOUNT_PAT }}
 
-      - name: Configure git
-        run: |
-          git config --global user.name "$GITHUB_ACTOR"
-          git config --global user.email '$GITHUB_ACTOR@users.noreply.github.com'
-      - name: Install Python
-        uses: actions/setup-python@v1
       - name: Build and push image
         run: |
           docker login ghcr.io -u $GITHUB_ACTOR --password-stdin <<< ${{ secrets.CONTAINER_REGISTRY_PASSWORD }}
@@ -36,6 +28,19 @@ jobs:
     runs-on: ubuntu-latest
     needs: [release]
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.SERVICE_ACCOUNT_PAT }}
+
+      - name: Configure git
+        run: |
+          git config --global user.name "$GITHUB_ACTOR"
+          git config --global user.email '$GITHUB_ACTOR@users.noreply.github.com'
+
+      - name: Install Python
+        uses: actions/setup-python@v1
+
       - name: Install bump2version
         run: |
           pip install --upgrade bump2version
