--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,6 +32,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           token: ${{ secrets.SERVICE_ACCOUNT_PAT }}
+          fetch-depth: 0
 
       - name: Configure git
         run: |
