--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,6 +53,7 @@ jobs:
 
       - name: Pacakage and push Helm
         run: |
+          git fetch --tags
           VERSION=$(git describe --abbrev=0 --tags)
           VERSION=${VERSION#"user-service-"}
           VERSION=$(bumpversion --current-version $VERSION --dry-run --list patch)
