--- a/chart/templates/ingress.yaml
+++ b/chart/templates/ingress.yaml
@@ -1,11 +1,7 @@
 {{- if .Values.ingress.enabled -}}
 {{- $fullName := include "user-service.fullname" . -}}
-{{- $svcPort := .Values.service.port -}}
-{{- if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
-apiVersion: networking.k8s.io/v1beta1
-{{- else -}}
-apiVersion: extensions/v1beta1
-{{- end }}
+{{- $releaseName := .Release.Name -}}
+apiVersion: voyager.appscode.com/v1beta1
 kind: Ingress
 metadata:
   name: {{ $fullName }}
@@ -32,10 +28,10 @@ spec:
       http:
         paths:
           {{- range .paths }}
-          - path: {{ . }}
+          - path: {{ .path }}
             backend:
-              serviceName: {{ $fullName }}
-              servicePort: {{ $svcPort }}
+              serviceName: "{{ $releaseName }}-{{ .serviceName }}"
+              servicePort: {{ .servicePort }}
           {{- end }}
     {{- end }}
   {{- end }}
