--- a/chart/templates/service.yaml
+++ b/chart/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "user-service.fullname" . }}
+  name: {{ include "user-service.fullname" . }}-rails
   labels:
-    {{- include "user-service.labels" . | nindent 4 }}
+    {{- include "user-service.labels" . | nindent 4 }}-rails
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "user-service.selectorLabels" . | nindent 4 }}
+    {{- include "user-service.selectorLabels" . | nindent 4 }}-rails
