--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -2,7 +2,46 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
+rails:
+  replicaCount: 1
+  autoscaling:
+    enabled: false
+    minReplicas: 1
+    maxReplicas: 5
+    targetCPUUtilizationPercentage: 80
+    targetMemoryUtilizationPercentage: 80
+
+sneakers:
+  replicaCount: 1
+  autoscaling:
+    enabled: true
+    minReplicas: 1
+    maxReplicas: 5
+    targetCPUUtilizationPercentage: 80
+    targetMemoryUtilizationPercentage: 80
+  service:
+    type: ClusterIP
+    port: 80
+
+hutch:
+  enabled: false
+  replicaCount: 1
+  autoscaling:
+    enabled: true
+    minReplicas: 1
+    maxReplicas: 5
+    targetCPUUtilizationPercentage: 80
+    targetMemoryUtilizationPercentage: 80
+  service:
+    type: ClusterIP
+    port: 80
+
+service:
+    type: NodePort
+    port: 80
+
+railsEnv: production
+secretKey: key
 
 image:
   repository: ghcr.io/ikenom/user-service
@@ -36,10 +75,6 @@ securityContext: {}
   # readOnlyRootFilesystem: true
   # runAsNonRoot: true
   # runAsUser: 1000
-
-service:
-  type: LoadBalancer
-  port: 80
 
 ingress:
   enabled: false
@@ -80,16 +115,17 @@ tolerations: []
 affinity: {}
 
 mongodb:
-  enabled: true
   auth:
     enabled: false
 
 rabbitmq:
-  enabled: true
   auth:
     username: user
     password: password
     erlangCookie: d
 
-firebase:
-  api_key: ''
+firebase_api_key: ""
+hmac_secret: ""
+
+tags:
+  user-service-dev: false
